# jai-proxy

./: .gitignore  Makefile  README.md  pyproject.toml
proxy/: avatar.py  avatar_transform.py  capture_store.py  cardbuilder.py  config.py  html_md.py  html_parser.py  janitor_mapper.py  lorebook.py  macros.py  mlx_client.py  models.py  pngtools.py  prompt_parser.py  saucepan_fragments.py  saucepan_mapper.py  server.py
scripts/: compile_userscript.py  compile_userscript_jai.py  compile_userscript_saucepan.py
tests/: test_avatar.py  test_avatar_transform.py  test_capture_store.py  test_cardbuilder.py  test_html_md.py  test_html_parser.py  test_janitor_mapper.py  test_lorebook.py  test_macros.py  test_mlx_client.py  test_prompt_parser.py  test_saucepan_lorebook.py  test_saucepan_mapper.py  test_scaffold.py  test_server.py
tests/fixtures/: README.md  akane_kujo_jai_lorebook.json  akane_kujo_st_lorebook.json  chat_request_hidden_ari.json  creator_closed.json  creator_closed_2.json  creator_open.json  creator_open_page2.json  hampter_script_kamii_university.json  profile_akane_kujo.html  profile_amelia.html  profile_mio.html  profile_vivienne.html  system_prompt_hidden_ari.txt  system_prompt_hidden_aubrey_evans.txt  system_prompt_hidden_lyra.txt  system_prompt_hidden_lyra_2.txt  system_prompt_open_akane_kujo.txt  system_prompt_open_kira.txt  system_prompt_open_sabrina_hill.txt
userscript/: api-capture.user.js  jai-proxy-bridge.user.js  janitorai-export.user.js  saucepan-export.user.js  saucepan-proxy-bridge.user.js
userscript/src/: 00-banner.js  bulk.js  config.js  (+4 more)
(+31 files in other folders)
