[project]
name = "jai-proxy"
version = "0.1.0"
description = "Archives JanitorAI character cards as SillyTavern V3 PNGs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pillow>=11.0",
    "pydantic-settings>=2.6",
]

[project.scripts]
jai-proxy = "proxy.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
